<resources>
    <string name="app_name">Green</string>
    <string name="label">Green</string>
    <string name="spin_title">电池类型</string>
    <string name="ble_client">BLE客户端</string>
    <string name="ble_server">BLE服务端</string>
    <string name="ble">低功耗蓝牙(BLE)</string>
    <string name="reScan">刷新</string>
    <string name="clean_log">清空日志</string>
    <string name="read">读取</string>
    <string name="setNotify">设置通知</string>
    <string name="max_byte">最多20字节</string>
    <string name="write">写入</string>
    <string name="re_conn">重连</string>
    <string name="serial_port">串口调试</string>
    <string name="write_cmd">写入协议内容</string>
    <string name="write_long_cmd">写入长(大于20字节)内容</string>
    <string name="model">产品型号</string>
    <string name="hard_ver">硬件版本</string>
    <string name="soft_ver">固件版本</string>
    <string name="bet_analyzer">电池检测-充电-放电维护仪</string>
    <string name="searc_ble">搜索蓝牙设备</string>
    <string name="set_bet">设置电池参数</string>
    <string name="set_bet_1">设置电池参数</string>
    <string name="run_last">运行上次参数</string>
    <string name="param_preview">运行参数预览</string>
    <string name="conn_batt_ple">请接入电池!!!</string>
    <string name="save">保存</string>
    <string name="quit">放弃</string>
    <string name="back">返回</string>
    <string name="ac_conn">市电连接：</string>
    <string name="dc_conn">电池连接：</string>
    <string name="ble_conn">蓝牙连接：</string>
    <string name="cascade">级联状态：</string>
    <string name="batt_type">电池类型：</string>
    <string name="batt_v">电池电压：</string>
    <string name="batt_ah">电池容量：</string>
    <string name="char_v">充电电压：</string>
    <string name="char_a">充电电流：</string>
    <string name="out_c">电池内阻：</string>
    <string name="out_a">放电电流：</string>
    <string name="stop_v">放电截止：</string>
    <string name="protect_t">保护温度：</string>
    <string name="charge">单次充电</string>
    <string name="discharge">单次放电</string>
    <string name="maintain">自动维护</string>
    <string name="number">序号</string>
    <string name="voltage">电压</string>
    <string name="current">电流</string>
    <string name="capacity">容量</string>
    <string name="temperature">温度</string>
    <string name="resistance">内阻</string>
    <string name="run_time">运行时间：</string>
    <string name="devices_list">可用BM设备列表</string>
    <string name="show_curve">展示曲线</string>
    <string name="on_off">开始/暂停</string>
    <string name="conn_ok">已连接</string>
    <string name="conn_no">未接入</string>
    <string name="batt">电池</string>
    <string name="batt_err">电池接入异常</string>
    <string name="li_batt">锂离子</string>
    <string name="fe_batt">铁锂</string>
    <string name="pb_batt">铅酸</string>
    <string name="ni_batt">镍氢</string>
    <string name="can_not_show_1">非完整充电过程，无法测定充电曲线</string>
    <string name="can_not_show_2">非完整放电过程，无法测定放电曲线</string>
    <string name="state">状态</string>
    <string name="standby">待机</string>
    <string name="device_id">设备ID：</string>
    <string name="time">时间</string>
    <string name="fast_test">快速检测</string>
</resources>