<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E2F0D9"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.example.view.CustomTitleBlock
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <com.example.view.CustomTitleBlock
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:leftImage="@drawable/greenlogo"/>

    <com.example.view.CustomTitleBlock
        android:layout_width="match_parent"
        android:layout_height="10dp"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/purple_500"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/param_preview"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center">
        <TableLayout
            android:id="@+id/TableLayout_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/batt_type"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/text_bet_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginStart="10dp"
                    android:text="000"
                    android:textColor="@color/purple_500"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_marginStart="15dp"
                    android:text="@string/batt"
                    android:textColor="@color/purple_500"
                    android:textSize="20sp" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_marginTop="10dp"
                    android:text="@string/batt_v"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/text_bet_v"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:layout_marginStart="10dp"
                    android:text="0.0"
                    android:textColor="@color/purple_500"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:layout_marginStart="10dp"
                    android:text="V"
                    android:textColor="@color/purple_500"
                    android:textSize="20sp" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_marginTop="10dp"
                    android:text="@string/batt_ah"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/text_bet_ah"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:layout_marginStart="10dp"
                    android:text="00"
                    android:textColor="@color/purple_500"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:layout_marginStart="10dp"
                    android:text="Ah"
                    android:textColor="@color/purple_500"
                    android:textSize="20sp" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_marginTop="10dp"
                    android:text="@string/char_v"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/text_charge_v"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:layout_marginStart="10dp"
                    android:text="0.0"
                    android:textColor="@color/purple_500"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:layout_marginStart="10dp"
                    android:text="V"
                    android:textColor="@color/purple_500"
                    android:textSize="20sp" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_marginTop="10dp"
                    android:text="@string/char_a"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/text_charge_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:layout_marginLeft="10dp"
                    android:text="0.0"
                    android:textColor="@color/purple_500"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:layout_marginLeft="10dp"
                    android:text="A"
                    android:textColor="@color/purple_500"
                    android:textSize="20sp" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_marginTop="10dp"
                    android:text="@string/out_c"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/text_out_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:layout_marginStart="10dp"
                    android:text="0.0"
                    android:textColor="@color/purple_500"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:layout_marginStart="10dp"
                    android:text="mΩ"
                    android:textColor="@color/purple_500"
                    android:textSize="20sp" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_marginTop="10dp"
                    android:text="@string/out_a"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/text_out_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:layout_marginStart="10dp"
                    android:text="0.0"
                    android:textColor="@color/purple_500"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:layout_marginStart="10dp"
                    android:text="A"
                    android:textColor="@color/purple_500"
                    android:textSize="20sp" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_marginTop="10dp"
                    android:text="@string/stop_v"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/text_stop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:layout_marginStart="10dp"
                    android:text="0.0"
                    android:textColor="@color/purple_500"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:layout_marginStart="10dp"
                    android:text="V"
                    android:textColor="@color/purple_500"
                    android:textSize="20sp" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_marginTop="10dp"
                    android:text="@string/protect_t"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/text_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:layout_marginStart="10dp"
                    android:text="00"
                    android:textColor="@color/purple_500"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:text="°C"
                    android:textColor="@color/purple_500"
                    android:textSize="20sp" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <Button
                android:id="@+id/Bnt_charge"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:background="@drawable/button_selector_g"
                android:text="@string/charge"
                android:textColor="#ffffff"/>
            <Button
                android:id="@+id/Bnt_out"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:background="@drawable/button_selector_g"
                android:text="@string/discharge"
                android:textColor="#ffffff"/>
            <!--        android:visibility="gone"-->
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/Bnt_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:textSize="25sp"
                android:background="@drawable/button_selector_g"
                android:text="@string/fast_test"
                android:textColor="#ffffff"
                android:visibility="gone"/>
            <Button
                android:id="@+id/Bnt_maintain"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="0dp"
                android:background="@drawable/button_selector_g"
                android:text="@string/maintain"
                android:textColor="#ffffff"
                android:textSize="20sp" />
            <Button
                android:id="@+id/Bnt_return"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:background="@drawable/button_selector_g"
                android:text="@string/back"
                android:textColor="#ffffff"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
